fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -304,8 +304,8 @@ body {
 .header-text {
   width: 100%;
   max-width: 320px;     
-  text-align: right;
-  justify-self: right;
+  text-align: center;
+  justify-self: center;
 }
 
 .header-text h1 {
